--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,5 @@
 name: Docker Image CI
+
 on:
   push:
     branches:
@@ -7,24 +8,28 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write  # 必须添加，才能推送到 GHCR
 
     steps:
     - name: Check out repository
-      uses: actions/checkout@master
+      uses: actions/checkout@v3
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    - name: Log in to Docker Hub
+    - name: Log in to GitHub Container Registry
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build and push Docker image
+    - name: Build and push Docker image to GHCR
       uses: docker/build-push-action@v4
       with:
         context: .
         platforms: linux/amd64,linux/arm,linux/arm64
         push: true
-        tags: youshandefeiyang/sub-web-modify:latest
+        tags: ghcr.io/${{ github.repository_owner }}/sub-web-modify:latest
