--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,6 +23,6 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        platforms: linux/amd64,linux/arm,linux/arm64
+        platforms: linux/amd64
         push: true
         tags: sh1nyan/sub-web-modify:latest
